unpackaged/main/default/objects/FulfillmentOrderLineItem/FulfillmentOrderLineItem.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>