unpackaged/main/default/objects/FulfillmentOrderLineItem/fields/FOLINumber__c.field-meta.xml
<CustomField>
    <fullName>FOLINumber__c</fullName>
    <label>FOLI Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>