unpackaged/main/default/objects/FulfillmentOrderLineItem/fields/ProductSKU__c.field-meta.xml
<CustomField>
    <fullName>ProductSKU__c</fullName>
    <label>Product SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>