unpackaged/main/default/objects/FulfillmentOrderLineItem/fields/QuantityAvailableToCancel__c.field-meta.xml
<CustomField>
    <fullName>QuantityAvailableToCancel__c</fullName>
    <label>Quantity Available To Cancel</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>