unpackaged/main/default/objects/FulfillmentOrderLineItem/fields/QuantitytoCancel__c.field-meta.xml
<CustomField>
    <fullName>QuantitytoCancel__c</fullName>
    <label>Quantity to Cancel</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>