unpackaged/main/default/objects/FulfillmentOrderLineItem/fields/QuantitytoCancelPreview__c.field-meta.xml
<CustomField>
    <fullName>QuantitytoCancelPreview__c</fullName>
    <label>Quantity to Cancel Preview</label>
    <length>32</length>
    <type>Text</type>
</CustomField>